--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase title6"></h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                  <!-- <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p> -->
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/06-full.jpg" alt="">
                   <p class="desc6"></p>
                  
